[newui][minor] Fix spacing in fullscreen with long titles.

--- a/www-data/acoustics2.css
+++ b/www-data/acoustics2.css
@@ -882,7 +882,7 @@ a img {
 		}
 		#fullscreen-spacer-h {
 			float: left;
-			height: 100px;
+			height: 200px;
 			width:  20px;
 		}
 		#fullscreen-album-art {
